test/bad/classes/method07.px

class Test def

    func f(): Void def
        skip

    func f(): Void def
        skip

f()
